2 buttons + encoder (and its button) working in serial monitor

--- a/teensy-controller/platformio.ini
+++ b/teensy-controller/platformio.ini
@@ -12,7 +12,7 @@
 platform = teensy
 board = teensy40
 framework = arduino
-build_flags = -D USB_HID_SERIAL
+build_flags = -D USB_SERIAL_HID
 upload_protocol = teensy-cli
 lib_deps = 
 	thomasfredericks/Bounce2@^2.72
