--- a/[ARC] Tempest 3D/Assembly-CSharp.csproj
+++ b/[ARC] Tempest 3D/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets/Starfield Skybox/Demo/Script/LookCamera.cs" />
+    <Compile Include="Assets/Scripts/TitleScript.cs" />
     <Compile Include="Assets/Scripts/PlayerController.cs" />
     <Compile Include="Assets/Scripts/EnemyController.cs" />
     <Compile Include="Assets/TutorialInfo/Scripts/Readme.cs" />
